working on mobile iOS zoom issue

--- a/src/app/components/create-new-todo/create-new-todo.component.css
+++ b/src/app/components/create-new-todo/create-new-todo.component.css
@@ -438,7 +438,7 @@ input[type=number] {
 
   .titleCont input {
     background-color: #151515 !important;
-    width: 46% !important;
+    width: 60% !important;
   }
 
   .titleOpt {
@@ -569,7 +569,7 @@ input[type=number] {
     border: 1px solid #222;
     color: #fff;
     padding: 0 3vw;
-    font-size: 16px;
+    font-size: 1rem;
     font-weight: 500;
   }
 
@@ -580,7 +580,7 @@ input[type=number] {
     height: 100%;
     padding: 0 1.7vw;
     border-radius: 1.5vw;
-    font-size: 2.2vw;
+    font-size: 3vw;
     font-weight: bold;
     transition: 0.1s ease-in-out;
     background-color: #fff;
@@ -617,7 +617,7 @@ input[type=number] {
 
   .todoList {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
     justify-content: space-between;
     border-bottom: 1px solid #222;
     transition: 0.1s ease-in;
@@ -649,7 +649,7 @@ input[type=number] {
   }
 
   .todoList h3 {
-    font-size: 2.5vw;
+    font-size: 3vw;
     margin-right: 1vw;
     font-weight: 500;
   }
@@ -659,7 +659,7 @@ input[type=number] {
     resize: vertical;
     outline: none;
     border: none;
-    font-size: 2.5vw;
+    font-size: 1rem;
     background-color: transparent;
     border-bottom: 1px solid #fff;
     color: #fff;
@@ -712,13 +712,27 @@ input[type=number] {
     background-color: #777;
   }
 
+  .expenseRow{
+    align-items: flex-start;
+  }
+
+  .expenseRow h3 {
+    width: fit-content !important;
+  }
+
+  .expenseRow h6 {
+    min-width: fit-content !important;
+    font-size: 3vw;
+  }
+
   .expenseAmountInRow {
-    font-size: 2.5vw;
+    width: fit-content !important;
+    font-size: 3vw;
   }
 
   .expenseAmountEditInput {
     text-align: center;
-    font-size: 2.5vw;
+    font-size: 1rem;
     border-radius: 6px;
     padding: 0.4vw 1vw;
   }
@@ -735,7 +749,7 @@ input[type=number] {
   }
 
   .totalExpense h3 {
-    font-size: 2.5vw;
+    font-size: 3.5vw;
   }
 
   .globalDate {
